CHANGELOG
---------
v3.x.1 []

	BUG FIXES:
		* Unable to remove measures in case of pivot dimensions (2016.02.25)
		* Wrong MDX in case of filters in more than 2 level inside one common hierarchy (2016.02.21)


v3.x [2016.10.20]

	NEW FEATURES:
		* Values in one filter combo are filtered by other filters selections (default but optional)
        * Added Template management And CSS overrides: User can change alarms logic and easily override default CSS
        * Added Show Alarms option: Display alarms or not
		* Added Show Zeros option: Not just show nulls
		* Added Show Table option: Use BTable filters for other dashboard components
		* Added Endpoint support: Now the openFiltersSelectorPanel method can take one endpoint as parameter in order to use BTable filter
			panel from external applications
		* Added Menu Icons and Toolbar
		* Added Navigation History support: Home and Back buttons

	BUG FIXES:

v2.1 [2014.06.10]

	NEW FEATURES:
		* BTable Ext library providing functions to perform a drill from anywhere in a dashboard and to open btable files

	BUG FIXES:
		* cannot open the context menu in many mobile browsers
		* the selection of a radio button is not visible in Table Settings submenu
		* https://github.com/biztech-it/BTable/issues/4


v2.0 [2014.03.19]

	NEW FEATURES:
		* Mondrian's elements shown using captions instead of names (with localized schema support)
		* Mondrian's elements not shown if the user's Mondrian role can't access them
		* numbers formatting derived from Mondrian's "formatString" attribute (with localization support)
		* saving a BTable analysis to a file
		* opening a saved BTable analysis
		* using a saved BTable analysis to build a new BTable within a dashboard (with ability to override filters and table settings)
		* opening a BTable in a new tab or window
		* drill target option: drill in a new tab | drill in a new window | drill in the same page (only in Render dashboard)
		* fixed table header option

	BUG FIXES: